--- a/stories/误入鸡窝1.md
+++ b/stories/误入鸡窝1.md
@@ -1,3 +1,5 @@
+# 作者： treeShakking
+
 我今年22岁，处男，还在上大学，追过几个女孩，都没成功，长相其貌不扬，也没多少钱，嘴巴还笨，时不时觉得自己这辈子可能就这样了，或许当一辈子处男也挺好。
 
 过年回家，一个好久不联系的初中同学小寒突然叫我出来。
@@ -14,23 +16,23 @@
 
 刚一上楼我就惊呆了，一个穿着齐b小短裙的姑娘就那么明晃晃的站在那里，给我吓了一大跳，小寒拉着我往里面的小黑屋走，我还没看清楚里面的状况，就被前后左右四五个穿着暴露的姑娘簇拥着，让我进去玩玩。
 
-那一刻我的脑子是懵的，我直接的离我最近的是一个戴着眼镜，竖着双马尾，穿着jk制服的姑娘，这一身简直正中我的目标，她双臂缠绕着我的胳膊，让我的下体直接来了反应，我半推半就的就和她来到了屋里。
+那一刻我的脑子是懵的，离我最近的是一位戴着眼镜，竖着双马尾，穿着jk制服的姑娘，这一身简直正中我的目标，她双臂缠绕着我的胳膊，让我的下体直接来了反应，半推半就的就和她来到了屋里。
 
-我这个小处男真的是没经历过这么大阵仗，吓得不敢说话，姑娘则自顾自地脱衣服，看我愣在那说，你等啥呢，还不脱衣服呢？
+我这个小处男真的是没经历过这么大阵仗，吓得不敢说话，姑娘则自顾自地脱衣服，看我愣在那，她说，你等啥呢，还不脱衣服呢？
 
-我说，哦哦，反应了一下又说，多钱。
+我说，哦哦，反应了一下又说，多钱？
 
-姑娘笑了起来，说没事，你那个土豪朋友请客，你今天随便玩，你要是觉得我不行，你还可以出去再选选。
+姑娘笑了起来，说没事，你那个土豪朋友请客，今天你随便玩，你要是觉得我不行，还可以出去再选选。
 
 不用不用，我连忙说，我看你就挺好的。
 
-姑娘继续笑笑，站起来，露出了她的胸，只穿丁字裤，说你爬下了，保证让你舒服。
+姑娘笑笑，站起来，露出了她的胸，只穿丁字裤，说你趴下吧，保证让你舒服。
 
 那一瞬间，我看清楚了姑娘的脸，我也不知道我为什么有这种执念，我觉得一定要看清楚，了解了才可以做那种事情，但是就那一撇我就被眼前这个女孩征服了，她的五官其实并没有那么像风尘女，戴着眼镜多少还有点像老师的样子，而且口音也不是很垮，普通话说的不错。
 
-然后姑娘开始给我做“按摩”，具体的流程老司机都明白，但第一次经历的我还是触动很深，我有些同情这个姑娘，经常会冒出来，你为什么要对我做这种事的想法。
+然后姑娘开始给我做“按摩”，舌头啊，乳头啊，嘴巴啊，口水啊，头发啊，在我的肉体上游走，具体的流程老司机都明白，但第一次经历的我还是触动很深，我有些同情这个姑娘，经常会冒出来，你为什么做这个行业的想法。
 
-你别多想了，这就是我的工作，姑娘说。
+姑娘似乎看出了我的心思，说你别多想了，这就是我的工作。
 
 你叫什么，我问。
 
@@ -38,7 +40,7 @@
 
 她边按着，我们边聊着。
 
-我知道了她大概的身世，家里比较穷，明明读书很好，却没法负担学费，进入这行也是朋友带的，主要也是来钱快。
+我知道了她大概的身世，家里比较穷，明明读书很好，却没法负担学费，进入这行也是朋友带的，主要也是来钱快，她家里欠了不少钱。
 
 按完了，她说，你可以操我了。
 
@@ -48,11 +50,11 @@
 
 我顺着她的腰，摸到了她的脖子，又摸到了她的胸，然后是屁股和大腿，说实话，线条是真的很棒，皮肤也很滑，想不到做这种工作的女孩身材也能这么好，可能是同行竞争比较激烈吧。
 
-摸的时候我下体已经涨痛的厉害，她伸手过来，说，好大啊，好热啊，和你做爱一定很爽。
+摸的时候我下体已经涨痛的厉害，她伸手过来一把握住，说，好大啊，好热啊，和你做爱一定很爽。
 
 这个时候我已经顾不得其他了，二十多年的性压抑终于要似乎马上就要喷薄而出，七七看出我的心思，赶忙从抽屉里拿出安全套，带上以后，我把她按在床上，使出浑身的力气抽送，这时候是完全本能的动作，没有任何的理性，我听到七七在我身下呻吟喘息，我们的汗液体液交织，没过一会我就射了。
 
-我抽出鸡巴，像一个瘪了的气球，往旁边一躺。
+我抽出鸡巴，像一个瘪了的气球，躺在一旁。
 
 七七说，唉，你这个年轻人啊，平时要多做运动，你看看就这一会你就喘成这样。
 
@@ -62,9 +64,9 @@
 
 我说，可以吗？
 
-怎么不可以，你第一次就十分钟，七七说。
+怎么不可以，你第一次就十分钟，你的时间是五十分钟，七七说。
 
-七七顽皮的趴在我的肚子上，瞅着我的鸡巴发呆，用做了美甲的手指轻轻的刺激我的鸡巴，好痒。
+七七顽皮的趴在我的肚子上，瞅着我的鸡巴发呆，用做了美甲的手指轻轻的揉捏着它，好痒。
 
 好大啊，好热，这样吧，这次我来，七七说。
 
@@ -74,7 +76,7 @@
 
 也是没过多久，我看到七七像一具尸体一样泄气了，直直的倒在我身上，她的嘴巴流着口水，闭着眼睛，一副见了上帝的模样，我知道她高潮了，我居然让一个妓女高潮了。
 
-不过我还差点一次，七七的高潮再次点燃了我的欲火，我直接一个起跳，反客为主，再次把她压在身下，她开始很震惊，后来是被迫营业的样子，随着我抽送的加强，她连续高潮了起来。
+但是我还差点意思，没有射出，浑身不舒服，我一个起跳，反客为主，再次把她压在身下，她开始很震惊，后来是被迫营业的样子，随着我抽送的加强，她连续高潮了起来。
 
 最后，我们俩同时达到了高潮，两个人的肉体和精神在那一瞬间集体升华。
 
