--- a/stories/误入鸡窝2.md
+++ b/stories/误入鸡窝2.md
@@ -1,3 +1,5 @@
+## 作者：treeShakking
+
 和七七美妙的时光很快就过去了，七七穿好她的jk制服，蹬上高跟鞋和白丝，带我出去。
 
 外面的确是休息区，有成片的躺椅，躺椅前还有电视，房间很暗，隐约能看到边上有很多姑娘，我估计都是做这个职业的。
@@ -16,53 +18,67 @@
 
 说完，他朝姑娘那边招手，过来一个身材高挑的姑娘，穿着白色性感包臀连衣裙，里面的黑色内裤都露出来一半，我看的清清楚楚。
 
-怎么样哥，玩吗？她说。
+寒哥，玩吗？她说。
 
-我困了，想睡一觉，等我醒了玩好不好？小寒说完，手已经在姑娘的下体摸来摸去，直接要伸到逼里了。
+寒哥没说话，手却已经在姑娘的下体摸来摸去，直接要伸到逼里了，说，我现在还不想玩，有些困，想睡一觉，他拍拍身旁的躺椅说，你在这陪我躺一会。
 
-你不玩叫我过来干嘛？姑娘有些不高兴，身体也在往后躲。
+姑娘也不抗拒，直接躺在了他旁边，一边随着他的节奏抚摸着寒哥，说，我让你摸，一会摸出感觉来了，你去也得去，不去也得去！
 
-我这不看你们也太无聊了吗，小寒拍拍旁边的躺椅，说，来，你也来着躺一会，我们睡醒了我陪你进去。
+姑娘透过寒哥的脸，看向我，问，你朋友啊？
 
-那个姑娘看了看旁边的我，问我玩不玩，我摇摇头。
+是啊，小寒解释说，咋样，小鲜肉吧，干净，玩不玩？
 
-然后略显不情愿的躺在了小寒旁边。
+玩啊，要问他啊，他要玩我奉陪到底。
 
-不得不说小寒泡妞的本事不知道比我高多少了，两个人没一会就打打闹闹有说有笑了。
+他刚刚和谁玩的？姑娘问。
 
-我出于贤者时间需要休息，看着电视不知不觉居然睡着了。
+我说，那个戴着眼镜的姑娘，穿着JK。
+
+哟，不错呀，你们看着就挺配，怎么样，爽吗？高挑美女又凑到我跟前，抚摸着我的手臂，用极其诱惑的声音说：想不想体验下我？保证给你带来不一样的感觉。
+
+我的下体又不争气的勃起了。
+
+小寒则一把拽过姑娘，大喝一声，让我弟兄休息会，人家处男都要被你们这帮鸡给榨干了，可一个人造啊！来，躺好，陪我睡觉。
+
+说完，两个人骂骂咧咧，有打有闹。
+
+这个好机会错过了，有些不高兴，打开了电视，不知不觉居然睡着了。
 
 房间的窗帘很厚，根本分不清白夜黑昼。
 
-我是被旁边的声响吵醒的，小寒在躺椅上操着那个姑娘，卧槽。
+我是被旁边的声响吵醒的，小寒操着那个姑娘，就那么在公共躺椅上，操着，卧槽。
 
-我一醒来就刷新了三观，就看到小寒在那边我旁边用力的抽送，虽然很黑，但我确定下面就是刚才被叫过来那个姑娘，她似乎没有任何反应，像是睡着了，没多久，小寒完毕了，那个姑娘还没醒。
+我简直刷新了三观，看着小寒在那边我旁边用力的抽送，那个压在他身下的姑娘，显然就是刚才那个长腿包臀裙姑娘，她似乎没有任何反应，像是睡着了。
 
-我一脸疑惑，问他，什么情况。
+没多久，小寒完毕了，那个姑娘还没醒。
 
-什么什么情况，这就是我的玩法啊，睡奸，你看，还睡着呢，都快打呼噜了。
+我一脸疑惑，问他，什么情况？
+
+不懂了吧，这叫睡奸，你看，还睡着呢，都快打呼噜了。
 
 什么？她不会醒吗？
 
 不会，我当然有办法，小寒说，说完让我去看看她的下体，我看到小寒的白色液体从美女的下体慢慢流出。
 
-你居然没带套，你想找死啊。
+你居然没带套，你找死啊。
 
-这有啥啊，这就叫刺激的玩法，你还要好好学学。
+这有啥啊，刺激吗。
 
 我摇摇头，就算玩，我也想正经的玩，我可以花钱。
 
-小寒突然又来到我的身边，问我，你不继续啊，再来啊。
+小寒突然又来到我的身边，朝我冷笑着问，你来不来？
 
-啥？
+啥？现在？
 
-你再操一边这个姑娘，看我这底子打的多好，内裤都没穿给你留着呢。
+小寒头向姑娘那撇了撇，说，内裤都没穿，给你留着呢。
 
-我下意识地摇摇头，但是听到小寒这么说我的下体居然反应巨大，马上又硬又热。
+我顿时感觉自己血压升高，一种想上的冲动占据心头，不过道德感让我觉得这是极其错误的事情。
+
+过了这个村可就没这个店了，小寒说，一会醒了你要操记得自己花钱。
 
 我看了看那个可怜的姑娘，睡着的样子少了之前的高傲，显得温柔而宁静，长发下是秀气的鼻尖和嘴唇，大长腿似乎超过了躺椅的长度，一双黑色的性感高跟一只掉到了地上，一只还在脚上。
 
-别看了，上吧，再过一会她可就醒了，小寒说。
+小寒拍了拍我的肩膀，别犹豫了，上吧。
 
 既然都来这了，还矜持个鸡巴，机不可失失不再来，想着我就脱下了裤子，一个翻身到了长腿姑娘身上，直接插入。
 
@@ -70,9 +86,9 @@
 
 因为至少也算是公共区域，操起来我还是有些拘谨，就怕动静太大惊动别人，不过看着身下这个平时只有抖音上才能见到的极品美女，还是欲从心烧。
 
-我俯下身，一手轻捋她的头发，另外一只在她香肩上游走，她的吊带掉了一边，看到楚楚动人而安静的她，我忍不出亲她，亲着亲着我似乎无法控制自己，直到把她头整个捧起，舌头伸进她的喉咙，在她的口腔里来回打转，我闻到她头发上的香气。
+我俯下身，一手轻捋她的头发，另外一只在她香肩上游走，她的吊带掉了一边，看到楚楚动人而安静的她，我忍不出亲她，亲着亲着我似乎无法控制自己，直到把她头整个捧起，舌头伸进她的喉咙，在她的口腔里来回打转，她的发丝轻拍在我的脸上，我闻到她头发上的香气，让我欲罪欲仙。
 
-我的嘴巴和下体一起发力，最终高潮射出，好爽，又一次。
+我的舌头和鸡巴一起发力，最终高潮射出，好爽，又一次，在一个这么漂亮的姑娘上面，在一个平时我在外面根本接触不到，也根本不会理我的大美女上面。
 
 小寒在一旁给我竖了个大拇指，真投入，你可以去拍片了。
 
