--- a/stories/误入鸡窝4.md
+++ b/stories/误入鸡窝4.md
@@ -1,1 +1,22 @@
+当我醒来的时候，我依然抱着七七，鸡巴已经滑了出来，而且软了，七七还在睡着。
+
+我的头顶猛地被什么东西砸了一下，抬头一看，一个怒气冲冲的女人瞪着我，像是要把我吃了，我认识她，这是刚才坐在那边那个老鸨。
+
+她穿着黑色的紧身裙，黑丝，蹬着一双恨天高，揪着我的耳朵把我拎了起来，她的劲可真是大。
+
+你小子，不老实啊，她说，出来！
+
+我只得听话，被她拎到一边，直接拽到楼道里，你想干嘛，砸场子吗，她问我。
+
+楼道里的灯光黄色而昏暗，老鸨画着浓妆，烟熏妆，大红嘴唇，看着应该三四十岁，两个奶子耸在前胸，马上就要喷薄而出。
+
+没有没有，我就是。。。
+
+就是什么！她的声音宏亮而沙哑，走，你跟我来！
+
+说完像老鹰捏小鸡一样拎着我的脖子让我继续走。
+
+里面的房间，她随便找了一件，一把把我推过去，我重重地摔在床上。
+
+先说清楚，你不许欺负我家姑娘，在座山就给她们操了，你以为你是谁，钱我就不问你要了，但是你，今天不让老娘满意了就别走。
 
